applications/test1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: test
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
